--- a/package.json
+++ b/package.json
@@ -46,12 +46,15 @@
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
     "@types/lodash-es": "^4.17.9",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^7.0.0",
     "eslint": "^8.48.0",
+    "eslint-plugin-vue": "^9.17.0",
     "husky": "^8.0.0",
     "less": "^4.2.0",
     "lint-staged": "^14.0.1",
